# startTool

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_tasks.sh
cmake/: config.json.in
config/: demo.json
docs/: GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LEARNING_GUIDE.md  PRACTICE_PROJECTS.md  QUICK_START.md  README.md  TASK_SYSTEM_GUIDE.md  TECHNICAL_DESIGN.md
include/: config_manager.h  cpp_task_wrapper.h  example_task.h  logger.h  process_interface.h  process_manager.h  task_interface.h  task_manager.h
src/: cpp_task_demo.cpp  launcher.c  simple_cpp_demo.cpp  task_demo.c
src/plugins/: cpp_example_task.cpp  data_processor_task.cpp  example_process.c  example_task.c  network_service_task.cpp  simple_cpp_task.cpp
